--- a/styles/global.css
+++ b/styles/global.css
@@ -14,6 +14,14 @@
   src: local('Montserrat Regular'), local('Montserrat-Regular'), url('/fonts/montserrat-v14-latin-regular.woff2') format('woff2')
 }
 
+@font-face {
+  font-family: 'Majesti-Banner';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Majesti Banner Book'), local('Majesti-Banner-Book'), url('/fonts/Majesti-Banner-Book.woff2') format('woff2')
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -26,6 +34,13 @@ p {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+h1 {
+  font-family: Majesti-Banner, serif;
+  font-size: clamp(30px, 8vw, 42px);
+  text-align: center;
+  line-height: 1.2em;
 }
 
 h2 {
