--- a/styles/global.css
+++ b/styles/global.css
@@ -7,6 +7,14 @@
 }
 
 @font-face {
+  font-family: 'PT-Serif';
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+  src: local('PT Serif Bold Italic'), local('PTSerif-Bold-Italic'), url('/fonts/pt-serif-v11-latin-700italic.woff2') format('woff2');
+}
+
+@font-face {
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 400;
@@ -31,7 +39,15 @@ p {
   font-size: 15px;
   font-family: PT-Serif;
   line-height: 2em;
+  letter-spacing: 0.01em;
 }
+
+strong {
+  font-family: PT-Serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
 a {
   color: inherit;
   text-decoration: none;
