--- a/styles/global.css
+++ b/styles/global.css
@@ -41,6 +41,7 @@
 * {
   padding: 0;
   margin: 0;
+  color: #303030;
 }
 
 p {
@@ -78,6 +79,13 @@ h2 {
 }
 
 h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
+h4 {
   font-family: Freight-Big-Pro, serif;
   font-size: 17px;
   font-style: italic;
@@ -86,11 +94,6 @@ h3 {
   letter-spacing: 0.1em;
 }
 
-h4 {
-  font-family: Montserrat, sans-serif;
-  font-size: 12px;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-}
+
 
 
