--- a/styles/global.css
+++ b/styles/global.css
@@ -78,6 +78,13 @@ h2 {
   letter-spacing: 0.05em;
 }
 
+h3 {
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+}
+
 h4 {
   font-family: Freight-Big-Pro, serif;
   font-size: 17px;
