fix flash of bold text as font loads for h3

--- a/styles/global.css
+++ b/styles/global.css
@@ -81,6 +81,7 @@ h2 {
 h3 {
   font-family: Montserrat, sans-serif;
   font-size: 16px;
+  font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.2em;
 }
